Fixed some styling, edited seeds

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,7 +9,7 @@
     <input
       id="username-signup"
       type="text"
-      class="form-input rounded-md shadow-sm border-gray-300 focus:border-indigo-500 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+      class="form-input px-4 py-2 border w-1/4 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
     />
   </div>
 
@@ -21,7 +21,7 @@
     <input
       id="email-signup"
       type="email"
-      class="form-input rounded-md shadow-sm border-gray-300 focus:border-indigo-500 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+      class="form-input px-4 py-2 border w-1/4 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
     />
   </div>
 
@@ -33,7 +33,7 @@
     <input
       id="password-signup"
       type="password"
-      class="form-input rounded-md shadow-sm border-gray-300 focus:border-indigo-500 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+      class="form-input px-4 py-2 border w-1/4 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
     />
   </div>
 
