--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
 
   <body>
     <div class="container mx-auto">
-      <header class="flex justify-between items-center py-4">
+      <header class="flex justify-between items-center py-4 bg-gray-400">
         <h1><a class="logo text-3xl font-bold text-gray-800" href="/">Just
             Another Tech Blog</a></h1>
         <nav>
@@ -48,7 +48,7 @@
         {{{body}}}
       </main>
 
-      <footer class="bg-gray-800 text-gray-100 py-4">
+      <footer class="bg-gray-800 text-gray-100 py-4 fixed bottom-0 w-full">
         <div class="container mx-auto">
           <p>
             Just Another Tech Blog by
