--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -25,12 +25,12 @@
   <div class="flex items-center justify-between">
     <button
       type="submit"
-      class="btn bg-blue-500 text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+      class="btn bg-blue-500 text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 rounded-full p-2"
     >
       Login
     </button>
     <a
-      class="btn bg-gray-200 hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+      class="btn bg-gray-200 hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 rounded-full p-2"
       href="/signup"
     >
       Sign Up
