--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,10 +28,6 @@
             </a>
 
             <div class="flex items-center lg:order-2">
-              {{! <a
-          href="/dashboard"
-          class="focus:ring-4  font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 hover:bg-gray-700 focus:outline-none focus:ring-gray-800"
-        >Dashboard</a> }}
               {{#if loggedIn}}
                 <a
                   id="logout"
@@ -59,7 +55,7 @@
                 <li>
                   <a
                     href="/"
-                    class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0"
+                    class="block py-2 pr-4 pl-3 border-b lg:border-0 lg:hover:text-primary-700 lg:p-0 text-gray-400 lg:hover:text-white hover:bg-gray-700 hover:text-white lg:hover:bg-transparent border-gray-700"
                     aria-current="page"
                   >Home</a>
                 </li>
@@ -80,7 +76,7 @@
         {{{body}}}
       </main>
 
-      <footer class="bg-gray-800 text-gray-100 py-4 fixed bottom-0 w-full">
+      <footer class="bg-gray-800 text-gray-100 py-2 fixed bottom-0 w-full">
         <div class="container mx-auto">
           <p>
             Just Another Tech Blog by
